--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -52,7 +52,7 @@ jobs:
           cache: pip
 
       - name: Install dependencies
-        run: pip install google-cloud-bigquery
+        run: pip install -r requirements.txt
 
       - name: Fetch data from BigQuery
         env:
